--- a/Legende_unity/Packages/manifest.json
+++ b/Legende_unity/Packages/manifest.json
@@ -14,7 +14,9 @@
     "com.unity.timeline": "1.2.6",
     "com.unity.ugui": "1.0.0",
     "com.unity.xr.legacyinputhelpers": "1.3.11",
-    "com.unity.xr.management": "3.0.6",
+    "com.unity.xr.management": "3.2.10",
+    "com.unity.xr.oculus.android": "2.38.6",
+    "com.unity.xr.oculus.standalone": "2.38.4",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
