--- a/.gitignore
+++ b/.gitignore
@@ -3050,3 +3050,9 @@ Legende_unity/Assets/Import/Battlehub/Integration.meta
 Legende_unity/Assets/Import/Battlehub/.DS_Store
 Legende_unity/Assets/Import/Battlehub.meta
 Legende_unity/Assets/Import/.DS_Store
+Legende_unity/.DS_Store
+Legende_unity/Assets/.DS_Store
+Legende_unity/Assets/Prefabs/.DS_Store
+Legende_unity/Assets/Prefabs/.DS_Store
+Legende_unity/Assets/.DS_Store
+Legende_unity/Assets/.DS_Store
