Update new mine des laves

--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,7 @@ Legende_unity/Assets/Materials/skyb1/front.psd.meta
 Legende_unity/Assets/Materials/skyb1/bot.psd.meta
 Legende_unity/Assets/Materials/skyb1/back.psd.meta
 
+Legende_unity/ProjectSettings/FbxExportSettings.asset
+Legende_unity/Packages/manifest.json
+Legende_unity/Packages/manifest.json
+Legende_unity/Packages/manifest.json
