--- a/.gitignore
+++ b/.gitignore
@@ -3056,3 +3056,4 @@ Legende_unity/Assets/Prefabs/.DS_Store
 Legende_unity/Assets/Prefabs/.DS_Store
 Legende_unity/Assets/.DS_Store
 Legende_unity/Assets/.DS_Store
+Legende_unity/.DS_Store
