--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@
 [Ll]ogs/
 [Mm]emoryCaptures/
 
-# [Aa]ssets/Import/
+[Aa]ssets/Import/
 *.psd
 
 # Asset meta data should only be ignored when the corresponding asset is also ignored
